--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/tittobreno/node-typescript-api#readme",
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/module-alias": "^2.0.1",
     "@types/supertest": "^2.0.12",
@@ -36,7 +37,9 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.6",
     "@types/node": "^18.11.17",
+    "express": "^4.18.2",
     "module-alias": "^2.2.2"
   }
 }
