--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "npm run build && node dist/index.js",
     "test:functional": "jest --projects ./test --runInBand",
     "lint": "eslint ./src ./test --ext .ts",
-    "lint:fix": "eslint ./src ./test --ext .ts --fix"
+    "lint:fix": "eslint ./src ./test --ext .ts --fix",
+    "styles:check": "prettier --check ./src/**/*.ts ./test/**/*.ts",
+    "styles:fix": "prettier --write ./src/**/*.ts ./test/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
+    "prettier": "^2.8.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
