--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:dev": "ts-node-dev ./src/index.ts",
     "start": "npm run build && node dist/index.js",
     "test:functional": "jest --projects ./test --runInBand",
+    "test:unit": "jest",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "styles:check": "prettier --check ./src/**/*.ts ./test/**/*.ts",
@@ -25,6 +26,7 @@
   },
   "homepage": "https://github.com/tittobreno/node-typescript-api#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/module-alias": "^2.0.1",
@@ -42,6 +44,7 @@
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
     "@types/node": "^18.11.17",
+    "axios": "^1.2.2",
     "express": "^4.18.2",
     "module-alias": "^2.2.2"
   }
