--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/tittobreno/node-typescript-api#readme",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/config": "^3.3.0",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/module-alias": "^2.0.1",
@@ -45,6 +46,7 @@
     "@overnightjs/core": "^1.7.6",
     "@types/node": "^18.11.17",
     "axios": "^1.2.2",
+    "config": "^3.3.8",
     "express": "^4.18.2",
     "module-alias": "^2.2.2"
   }
